Cure.tla: +msgs, +Read, +ReadReply, +Update, +UpdateReply, +UpdateRequest

--- a/Cure.toolbox/TypeOK_SnapShot_1578980974698/MC.cfg
+++ b/Cure.toolbox/TypeOK_SnapShot_1578980974698/MC.cfg
@@ -13,35 +13,37 @@ k2 = k2
 \* MV CONSTANT declarations
 CONSTANTS
 v1 = v1
-v2 = v2
 \* MV CONSTANT declarations
 CONSTANTS
 c1 = c1
 c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_157892252677242000
+Datacenter <- const_1578980297099283000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_157892252677243000
+Partition <- const_1578980297099284000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_157892252677244000
+Key <- const_1578980297099285000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_157892252677245000
+Value <- const_1578980297099286000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_157892252677246000
+Client <- const_1578980297099287000
 \* SYMMETRY definition
-SYMMETRY symm_157892252677247000
+SYMMETRY symm_1578980297099288000
 \* CONSTANT definitions
 CONSTANT
-Sharding <- const_157892252677248000
+ClientAttachment <- const_1578980297099289000
+\* CONSTANT definitions
+CONSTANT
+KeySharding <- const_1578980297099290000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
 TypeOK
-\* Generated on Mon Jan 13 21:35:26 CST 2020
+\* Generated on Tue Jan 14 13:38:17 CST 2020
