--- a/Cure.toolbox/TypeOK_SnapShot_1578986657826/MC.cfg
+++ b/Cure.toolbox/TypeOK_SnapShot_1578986657826/MC.cfg
@@ -19,31 +19,34 @@ c1 = c1
 c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_1578980297099283000
+Datacenter <- const_1578986651799338000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_1578980297099284000
+Partition <- const_1578986651799339000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_1578980297099285000
+Key <- const_1578986651799340000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_1578980297099286000
+Value <- const_1578986651799341000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_1578980297099287000
+Client <- const_1578986651799342000
 \* SYMMETRY definition
-SYMMETRY symm_1578980297099288000
+SYMMETRY symm_1578986651799343000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_1578980297099289000
+ClientAttachment <- const_1578986651799344000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_1578980297099290000
+KeySharding <- const_1578986651799345000
+\* CONSTANT definition
+CONSTANT
+NotVal = NotVal
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
 TypeOK
-\* Generated on Tue Jan 14 13:38:17 CST 2020
+\* Generated on Tue Jan 14 15:24:11 CST 2020
