--- a/Cure.toolbox/TypeOK_SnapShot_1579084988980/MC.cfg
+++ b/Cure.toolbox/TypeOK_SnapShot_1579084988980/MC.cfg
@@ -19,27 +19,27 @@ c1 = c1
 c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_1578987021328358000
+Datacenter <- const_157908477038412000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_1578987021328359000
+Partition <- const_157908477038413000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_1578987021328360000
+Key <- const_157908477038414000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_1578987021328361000
+Value <- const_157908477038415000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_1578987021328362000
+Client <- const_157908477038416000
 \* SYMMETRY definition
-SYMMETRY symm_1578987021328363000
+SYMMETRY symm_157908477038417000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_1578987021328364000
+ClientAttachment <- const_157908477038418000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_1578987021328365000
+KeySharding <- const_157908477038419000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
@@ -49,4 +49,4 @@ Spec
 \* INVARIANT definition
 INVARIANT
 TypeOK
-\* Generated on Tue Jan 14 15:30:21 CST 2020
+\* Generated on Wed Jan 15 18:39:30 CST 2020
