--- a/Cure.toolbox/TypeOK/MC.cfg
+++ b/Cure.toolbox/TypeOK/MC.cfg
@@ -12,34 +12,34 @@ k1 = k1
 k2 = k2
 \* MV CONSTANT declarations
 CONSTANTS
-v1 = v1
+v = v
 \* MV CONSTANT declarations
 CONSTANTS
 c1 = c1
 c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_157908477038412000
+Datacenter <- const_1579763477793130000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_157908477038413000
+Partition <- const_1579763477793131000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_157908477038414000
+Key <- const_1579763477793132000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_157908477038415000
+Value <- const_1579763477793133000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_157908477038416000
+Client <- const_1579763477793134000
 \* SYMMETRY definition
-SYMMETRY symm_157908477038417000
+SYMMETRY symm_1579763477793135000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_157908477038418000
+ClientAttachment <- const_1579763477793136000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_157908477038419000
+KeySharding <- const_1579763477793137000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
@@ -49,4 +49,4 @@ Spec
 \* INVARIANT definition
 INVARIANT
 TypeOK
-\* Generated on Wed Jan 15 18:39:30 CST 2020
+\* Generated on Thu Jan 23 15:11:17 CST 2020
