--- a/Cure.toolbox/TypeOK_SnapShot_1579772706277/MC.cfg
+++ b/Cure.toolbox/TypeOK_SnapShot_1579772706277/MC.cfg
@@ -19,27 +19,27 @@ c1 = c1
 c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_1579596191826108000
+Datacenter <- const_157977201247222000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_1579596191826109000
+Partition <- const_157977201247223000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_1579596191826110000
+Key <- const_157977201247224000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_1579596191826111000
+Value <- const_157977201247225000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_1579596191826112000
+Client <- const_157977201247226000
 \* SYMMETRY definition
-SYMMETRY symm_1579596191826113000
+SYMMETRY symm_157977201247227000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_1579596191826114000
+ClientAttachment <- const_157977201247228000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_1579596191826115000
+KeySharding <- const_157977201247229000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
@@ -49,4 +49,4 @@ Spec
 \* INVARIANT definition
 INVARIANT
 TypeOK
-\* Generated on Tue Jan 21 16:43:11 CST 2020
+\* Generated on Thu Jan 23 17:33:32 CST 2020
