--- a/Cure.toolbox/CM/MC.cfg
+++ b/Cure.toolbox/CM/MC.cfg
@@ -19,34 +19,37 @@ c1 = c1
 c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_157993116320742000
+Datacenter <- const_1580029207130147000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_157993116320743000
+Partition <- const_1580029207130148000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_157993116320744000
+Key <- const_1580029207130149000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_157993116320745000
+Value <- const_1580029207130150000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_157993116320746000
+Client <- const_1580029207130151000
 \* SYMMETRY definition
-SYMMETRY symm_157993116320747000
+SYMMETRY symm_1580029207130152000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_157993116320748000
+ClientAttachment <- const_1580029207130153000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_157993116320749000
+KeySharding <- const_1580029207130154000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
+\* CONSTRAINT definition
+CONSTRAINT
+constr_1580029207130156000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
-TypeOK
-\* Generated on Sat Jan 25 13:46:03 CST 2020
+CM
+\* Generated on Sun Jan 26 17:00:07 CST 2020
