--- a/Cure.toolbox/CM_SnapShot_1580029208234/MC.cfg
+++ b/Cure.toolbox/CM_SnapShot_1580029208234/MC.cfg
@@ -19,34 +19,37 @@ c1 = c1
 c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_15800247817572000
+Datacenter <- const_1580029207130147000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_15800247817573000
+Partition <- const_1580029207130148000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_15800247817584000
+Key <- const_1580029207130149000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_15800247817585000
+Value <- const_1580029207130150000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_15800247817586000
+Client <- const_1580029207130151000
 \* SYMMETRY definition
-SYMMETRY symm_15800247817587000
+SYMMETRY symm_1580029207130152000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_15800247817588000
+ClientAttachment <- const_1580029207130153000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_15800247817589000
+KeySharding <- const_1580029207130154000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
+\* CONSTRAINT definition
+CONSTRAINT
+constr_1580029207130156000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
-TypeOK
-\* Generated on Sun Jan 26 15:46:21 CST 2020
+CM
+\* Generated on Sun Jan 26 17:00:07 CST 2020
