--- a/Cure.toolbox/CM_SnapShot_1580029012760/MC.cfg
+++ b/Cure.toolbox/CM_SnapShot_1580029012760/MC.cfg
@@ -19,34 +19,37 @@ c1 = c1
 c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_15800247817572000
+Datacenter <- const_1580029011711125000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_15800247817573000
+Partition <- const_1580029011711126000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_15800247817584000
+Key <- const_1580029011711127000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_15800247817585000
+Value <- const_1580029011711128000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_15800247817586000
+Client <- const_1580029011711129000
 \* SYMMETRY definition
-SYMMETRY symm_15800247817587000
+SYMMETRY symm_1580029011711130000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_15800247817588000
+ClientAttachment <- const_1580029011711131000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_15800247817589000
+KeySharding <- const_1580029011711132000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
+\* CONSTRAINT definition
+CONSTRAINT
+constr_1580029011712134000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
-TypeOK
-\* Generated on Sun Jan 26 15:46:21 CST 2020
+CM
+\* Generated on Sun Jan 26 16:56:51 CST 2020
