Cure: CM fixed; +cid and seqno for L[c]

--- a/Cure.toolbox/CM_SnapShot_1580102746717/MC.cfg
+++ b/Cure.toolbox/CM_SnapShot_1580102746717/MC.cfg
@@ -1,5 +1,9 @@
 \* MV CONSTANT declarations
 CONSTANTS
+c1 = c1
+c2 = c2
+\* MV CONSTANT declarations
+CONSTANTS
 d1 = d1
 d2 = d2
 \* MV CONSTANT declarations
@@ -13,33 +17,29 @@ k2 = k2
 \* MV CONSTANT declarations
 CONSTANTS
 v = v
-\* MV CONSTANT declarations
-CONSTANTS
-c1 = c1
-c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_157994428339181000
+Client <- const_1580102743636197000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_157994428339182000
+Datacenter <- const_1580102743636198000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_157994428339183000
+Partition <- const_1580102743636199000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_157994428339184000
+Key <- const_1580102743636200000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_157994428339185000
+Value <- const_1580102743636201000
 \* SYMMETRY definition
-SYMMETRY symm_157994428339186000
+SYMMETRY symm_1580102743636202000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_157994428339187000
+KeySharding <- const_1580102743636203000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_157994428339188000
+ClientAttachment <- const_1580102743636204000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
@@ -48,5 +48,5 @@ SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
-TypeOK
-\* Generated on Sat Jan 25 17:24:43 CST 2020
+CM
+\* Generated on Mon Jan 27 13:25:43 CST 2020
