--- a/Cure.toolbox/CM_SnapShot_1580105992319/MC.cfg
+++ b/Cure.toolbox/CM_SnapShot_1580105992319/MC.cfg
@@ -1,5 +1,9 @@
 \* MV CONSTANT declarations
 CONSTANTS
+c1 = c1
+c2 = c2
+\* MV CONSTANT declarations
+CONSTANTS
 d1 = d1
 d2 = d2
 \* MV CONSTANT declarations
@@ -13,43 +17,36 @@ k2 = k2
 \* MV CONSTANT declarations
 CONSTANTS
 v = v
-\* MV CONSTANT declarations
-CONSTANTS
-c1 = c1
-c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_1580029207130147000
+Client <- const_15801059855942000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_1580029207130148000
+Datacenter <- const_15801059855943000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_1580029207130149000
+Partition <- const_15801059855944000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_1580029207130150000
+Key <- const_15801059855945000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_1580029207130151000
+Value <- const_15801059855946000
 \* SYMMETRY definition
-SYMMETRY symm_1580029207130152000
+SYMMETRY symm_15801059855947000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_1580029207130153000
+KeySharding <- const_15801059855948000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_1580029207130154000
+ClientAttachment <- const_15801059855949000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
-\* CONSTRAINT definition
-CONSTRAINT
-constr_1580029207130156000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
 CM
-\* Generated on Sun Jan 26 17:00:07 CST 2020
+\* Generated on Mon Jan 27 14:19:45 CST 2020
