--- a/Cure.toolbox/CM_SnapShot_1580106113502/MC.cfg
+++ b/Cure.toolbox/CM_SnapShot_1580106113502/MC.cfg
@@ -1,5 +1,9 @@
 \* MV CONSTANT declarations
 CONSTANTS
+c1 = c1
+c2 = c2
+\* MV CONSTANT declarations
+CONSTANTS
 d1 = d1
 d2 = d2
 \* MV CONSTANT declarations
@@ -13,33 +17,29 @@ k2 = k2
 \* MV CONSTANT declarations
 CONSTANTS
 v = v
-\* MV CONSTANT declarations
-CONSTANTS
-c1 = c1
-c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_15800247817572000
+Client <- const_158010610116612000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_15800247817573000
+Datacenter <- const_158010610116613000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_15800247817584000
+Partition <- const_158010610116614000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_15800247817585000
+Key <- const_158010610116615000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_15800247817586000
+Value <- const_158010610116616000
 \* SYMMETRY definition
-SYMMETRY symm_15800247817587000
+SYMMETRY symm_158010610116617000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_15800247817588000
+KeySharding <- const_158010610116618000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_15800247817589000
+ClientAttachment <- const_158010610116619000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
@@ -48,5 +48,5 @@ SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
-TypeOK
-\* Generated on Sun Jan 26 15:46:21 CST 2020
+CM
+\* Generated on Mon Jan 27 14:21:41 CST 2020
