--- a/Cure.toolbox/TypeOK/MC.cfg
+++ b/Cure.toolbox/TypeOK/MC.cfg
@@ -1,5 +1,9 @@
 \* MV CONSTANT declarations
 CONSTANTS
+c1 = c1
+c2 = c2
+\* MV CONSTANT declarations
+CONSTANTS
 d1 = d1
 d2 = d2
 \* MV CONSTANT declarations
@@ -13,33 +17,29 @@ k2 = k2
 \* MV CONSTANT declarations
 CONSTANTS
 v = v
-\* MV CONSTANT declarations
-CONSTANTS
-c1 = c1
-c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_15800247817572000
+Client <- const_158011300760022000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_15800247817573000
+Datacenter <- const_158011300760023000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_15800247817584000
+Partition <- const_158011300760024000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_15800247817585000
+Key <- const_158011300760025000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_15800247817586000
+Value <- const_158011300760026000
 \* SYMMETRY definition
-SYMMETRY symm_15800247817587000
+SYMMETRY symm_158011300760027000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_15800247817588000
+KeySharding <- const_158011300760028000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_15800247817589000
+ClientAttachment <- const_158011300760029000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
@@ -49,4 +49,4 @@ Spec
 \* INVARIANT definition
 INVARIANT
 TypeOK
-\* Generated on Sun Jan 26 15:46:21 CST 2020
+\* Generated on Mon Jan 27 16:16:47 CST 2020
