--- a/Cure.toolbox/.project
+++ b/Cure.toolbox/.project
@@ -28,27 +28,27 @@
 		<link>
 			<name>FunctionUtils.tla</name>
 			<type>1</type>
-			<location>/home/hengxin/hfwei/github-projects-public/cure-kvstore-tla/FunctionUtils.tla</location>
+			<locationURI>PARENT-1-PROJECT_LOC/FunctionUtils.tla</locationURI>
 		</link>
 		<link>
 			<name>MathUtils.tla</name>
 			<type>1</type>
-			<location>/home/hengxin/hfwei/github-projects-public/cure-kvstore-tla/MathUtils.tla</location>
+			<locationURI>PARENT-1-PROJECT_LOC/MathUtils.tla</locationURI>
 		</link>
 		<link>
 			<name>RelationUtils.tla</name>
 			<type>1</type>
-			<location>/home/hengxin/hfwei/github-projects-public/cure-kvstore-tla/RelationUtils.tla</location>
+			<locationURI>PARENT-1-PROJECT_LOC/RelationUtils.tla</locationURI>
 		</link>
 		<link>
 			<name>SequenceUtils.tla</name>
 			<type>1</type>
-			<location>/home/hengxin/hfwei/github-projects-public/cure-kvstore-tla/SequenceUtils.tla</location>
+			<locationURI>PARENT-1-PROJECT_LOC/SequenceUtils.tla</locationURI>
 		</link>
 		<link>
 			<name>SetUtils.tla</name>
 			<type>1</type>
-			<location>/home/hengxin/hfwei/github-projects-public/cure-kvstore-tla/SetUtils.tla</location>
+			<locationURI>PARENT-1-PROJECT_LOC/SetUtils.tla</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
