--- a/Cure.toolbox/CM/MC.cfg
+++ b/Cure.toolbox/CM/MC.cfg
@@ -1,5 +1,9 @@
 \* MV CONSTANT declarations
 CONSTANTS
+c1 = c1
+c2 = c2
+\* MV CONSTANT declarations
+CONSTANTS
 d1 = d1
 d2 = d2
 \* MV CONSTANT declarations
@@ -13,43 +17,36 @@ k2 = k2
 \* MV CONSTANT declarations
 CONSTANTS
 v = v
-\* MV CONSTANT declarations
-CONSTANTS
-c1 = c1
-c2 = c2
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_1580029207130147000
+Client <- const_158011155466722000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_1580029207130148000
+Datacenter <- const_158011155466723000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_1580029207130149000
+Partition <- const_158011155466724000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_1580029207130150000
+Key <- const_158011155466725000
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_1580029207130151000
+Value <- const_158011155466726000
 \* SYMMETRY definition
-SYMMETRY symm_1580029207130152000
+SYMMETRY symm_158011155466727000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_1580029207130153000
+KeySharding <- const_158011155466728000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_1580029207130154000
+ClientAttachment <- const_158011155466729000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
-\* CONSTRAINT definition
-CONSTRAINT
-constr_1580029207130156000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
 CM
-\* Generated on Sun Jan 26 17:00:07 CST 2020
+\* Generated on Mon Jan 27 15:52:34 CST 2020
