checking CureKV against CM

--- a/Cure.toolbox/CM/MC.cfg
+++ b/Cure.toolbox/CM/MC.cfg
@@ -19,34 +19,37 @@ CONSTANTS
 v = v
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_158011155466722000
+Client <- const_1580115177628201000
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_158011155466723000
+Datacenter <- const_1580115177628202000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_158011155466724000
+Partition <- const_1580115177628203000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_158011155466725000
+Key <- const_1580115177628204000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_158011155466726000
+Value <- const_1580115177628205000
 \* SYMMETRY definition
-SYMMETRY symm_158011155466727000
+SYMMETRY symm_1580115177628206000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_158011155466728000
+KeySharding <- const_1580115177628207000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_158011155466729000
+ClientAttachment <- const_1580115177628208000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
+\* CONSTRAINT definition
+CONSTRAINT
+constr_1580115177628210000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
 CM
-\* Generated on Mon Jan 27 15:52:34 CST 2020
+\* Generated on Mon Jan 27 16:52:57 CST 2020
