--- a/CureKV.toolbox/CureKV-CM/MC.cfg
+++ b/CureKV.toolbox/CureKV-CM/MC.cfg
@@ -14,39 +14,43 @@ p2 = p2
 CONSTANTS
 k1 = k1
 k2 = k2
+k3 = k3
 \* MV CONSTANT declarations
 CONSTANTS
 v = v
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_15801059855942000
+Client <- const_1580480140947245000
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_15801059855943000
+Datacenter <- const_1580480140947246000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_15801059855944000
+Partition <- const_1580480140947247000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_15801059855945000
+Key <- const_1580480140947248000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_15801059855946000
+Value <- const_1580480140947249000
 \* SYMMETRY definition
-SYMMETRY symm_15801059855947000
+SYMMETRY symm_1580480140947250000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_15801059855948000
+KeySharding <- const_1580480140947251000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_15801059855949000
+ClientAttachment <- const_1580480140947252000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
+\* CONSTRAINT definition
+CONSTRAINT
+constr_1580480140947254000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
 CM
-\* Generated on Mon Jan 27 14:19:45 CST 2020
+\* Generated on Fri Jan 31 22:15:40 CST 2020
