--- a/CureKV.toolbox/CureKV-CM_SnapShot_1580477386992/MC.cfg
+++ b/CureKV.toolbox/CureKV-CM_SnapShot_1580477386992/MC.cfg
@@ -19,34 +19,37 @@ CONSTANTS
 v = v
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_1580102743636197000
+Client <- const_1580399994693223000
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_1580102743636198000
+Datacenter <- const_1580399994693224000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_1580102743636199000
+Partition <- const_1580399994693225000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_1580102743636200000
+Key <- const_1580399994693226000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_1580102743636201000
+Value <- const_1580399994693227000
 \* SYMMETRY definition
-SYMMETRY symm_1580102743636202000
+SYMMETRY symm_1580399994693228000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_1580102743636203000
+KeySharding <- const_1580399994693229000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_1580102743636204000
+ClientAttachment <- const_1580399994693230000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
+\* CONSTRAINT definition
+CONSTRAINT
+constr_1580399994693232000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
 CM
-\* Generated on Mon Jan 27 13:25:43 CST 2020
+\* Generated on Thu Jan 30 23:59:54 CST 2020
