--- a/CureKV.toolbox/CureKV-CM_SnapShot_1580531725554/MC.cfg
+++ b/CureKV.toolbox/CureKV-CM_SnapShot_1580531725554/MC.cfg
@@ -14,39 +14,43 @@ p2 = p2
 CONSTANTS
 k1 = k1
 k2 = k2
+k3 = k3
 \* MV CONSTANT declarations
 CONSTANTS
 v = v
 \* MV CONSTANT definitions
 CONSTANT
-Client <- const_158010610116612000
+Client <- const_1580480140947245000
 \* MV CONSTANT definitions
 CONSTANT
-Datacenter <- const_158010610116613000
+Datacenter <- const_1580480140947246000
 \* MV CONSTANT definitions
 CONSTANT
-Partition <- const_158010610116614000
+Partition <- const_1580480140947247000
 \* MV CONSTANT definitions
 CONSTANT
-Key <- const_158010610116615000
+Key <- const_1580480140947248000
 \* MV CONSTANT definitions
 CONSTANT
-Value <- const_158010610116616000
+Value <- const_1580480140947249000
 \* SYMMETRY definition
-SYMMETRY symm_158010610116617000
+SYMMETRY symm_1580480140947250000
 \* CONSTANT definitions
 CONSTANT
-KeySharding <- const_158010610116618000
+KeySharding <- const_1580480140947251000
 \* CONSTANT definitions
 CONSTANT
-ClientAttachment <- const_158010610116619000
+ClientAttachment <- const_1580480140947252000
 \* CONSTANT definition
 CONSTANT
 NotVal = NotVal
+\* CONSTRAINT definition
+CONSTRAINT
+constr_1580480140947254000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* INVARIANT definition
 INVARIANT
 CM
-\* Generated on Mon Jan 27 14:21:41 CST 2020
+\* Generated on Fri Jan 31 22:15:40 CST 2020
